--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> Pass ho jao! | Sharing Knowledge</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     
@@ -26,9 +26,9 @@
     </div>-->
       <div ng-view=""></div>
     <div ng-include="'views/footer.html'"></div>
-       
+    <script src="http://code.jquery.com/jquery-2.1.3.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.js"></script>
-	<script src="http://code.jquery.com/jquery-2.1.3.js"></script> 
+	 
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular-animate.js"></script>
