--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>-->
       <div ng-view=""></div>
     <div ng-include="'views/footer.html'"></div>
-    <script src="http://code.jquery.com/jquery-2.1.3.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.js"></script>
 	 
 
