--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
       
     <!-- Font -->
-    <link href='http://fonts.googleapis.com/css?family=Salsa' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Salsa' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="styles/main.css">
     
