--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!--<div class="jumbotron">
         <div ng-view=""></div>    
     </div>-->
-      <div ng-view=""></div>
+      <div ng-view="" autoscroll="true"></div>
     <div ng-include="'views/footer.html'"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.js"></script>
